[gd_scene load_steps=5 format=3 uid="uid://pause001"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_pause"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.03, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.15, 0.05, 0.25, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.2, 0.1, 0.35, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="PauseMenu" type="CanvasLayer"]
layer = 99
script = ExtResource("1_pause")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(300, 280)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_button_hover")
text = "RESUME"

[node name="SettingsButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_button_hover")
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.2, 0.6, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_button_hover")
text = "QUIT"

[node name="SettingsPanel" type="PanelContainer" parent="CenterContainer"]
visible = false
custom_minimum_size = Vector2(350, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="CenterContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "SETTINGS"
horizontal_alignment = 1

[node name="MasterVolume" type="HBoxContainer" parent="CenterContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/SettingsPanel/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "MASTER"

[node name="MasterSlider" type="HSlider" parent="CenterContainer/SettingsPanel/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolume" type="HBoxContainer" parent="CenterContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/SettingsPanel/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "MUSIC"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/SettingsPanel/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXVolume" type="HBoxContainer" parent="CenterContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/SettingsPanel/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="CenterContainer/SettingsPanel/VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="BackButton" type="Button" parent="CenterContainer/SettingsPanel/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_button_hover")
text = "BACK"
